Fixed overflow for circles on homepage

--- a/src/app/assets/styles/pages/singular/home.scss
+++ b/src/app/assets/styles/pages/singular/home.scss
@@ -146,6 +146,17 @@
 	}
 }
 
+@media only screen and (max-width: 1000px) {
+	#home {
+		&-hero {
+			&-circles {
+				transform: scale(0.7);
+				overflow: hidden;
+			}
+		}
+	}
+}
+
 @media only screen and (max-width: 454px) {
 	#home {
 		&-hero {
